using switch pattern matching for java 17