@@ -8,6 +8,22 @@ group = 'com.adsquare'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+compileJava {
+	options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).configureEach {
+	jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec).configureEach {
+	jvmArgs += '--enable-preview'
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
